syntax = "proto3";

option optimize_for = LITE_RUNTIME;

//just let me be lazy
message BoneData_proto
{
    optional uint32 index = 1;

    optional float tx = 2;
    optional float ty = 3;
    optional float tz = 4;

    optional float qx = 5;
    optional float qy = 6;
    optional float qz = 7;
    optional float qw = 8;

    optional float sx = 9;
    optional float sy = 10;
    optional float sz = 11;
}


message FrameData_proto
{
    optional float time = 1;          
    repeated BoneData_proto poBoneData = 2;  //  boneIndex(=nodeIndex)
}

message AnimData_proto
{
    optional string pName      = 1; 
    optional uint32 numBones   = 2; 
    optional uint32 numFrames  = 3; 
    repeated FrameData_proto poFrameData = 4;
}